@@ -471,7 +471,7 @@
 
 <H2 ID="CMDOPTZLI">    Option -Zli: Emit Local Import Thunks for Output Format PE </H2>
 
-    This option is only needed if option DLLIMPORT is used and the assembly source code prefers
+    This option is only needed if OPTION DLLIMPORT is used and the assembly source code prefers
     to use the CALL instruction instead of the INVOKE directive for calling imported functions.
     Option -Zli will then generate local code labels that the CALL instructions may refer to
     (the near CALL instruction uses PC-relative addressing).
