@@ -6,6 +6,8 @@
    Bugfixes:
    -  bin format, absolute segments: if segment wasn't referenced directly,
       but by the SEG operator, invalid code was generated; see absseg4.asm.
+   -  macro arguments: curly braces now handled Masm-compatible; see
+      macro25.asm.
 
    01.12.2025, v2.20:
 
